Changes in 4.0:
- Make adding multiple trackers at once possible (213194) 
- Bandwidth scheduler can now be deactivated temporarely
- Show information message instead of error when trackerlists are merged (213772)
- Add patch from Leo Trubach which adds support for IP rangs to the IP filter dialog
- Add support for metadata extension
- Remove own flags, now using exclusively those from KDE

Changes in 3.3.2:
- Fix crash when loading Feed in syndication plugin at startup (216207)

Changes in 3.3.1:
- Make sure exceptions in DHT code are caught, fixes a crash (213819)
- Fix several memory leaks at exit
- Fix bug in edge detection of items on the bandwidth schedule
- Fix crash when webinterface plugin is removed and there are active connections to the webserver (214187)
- Fix bugs causing context menus to be shown in wrong location (214657)
- Don't store the color for normal file priority in FileView, use system default (214748)
- Fix bug causing current tab in TorrentActivity not to be restored (214959)
- Fix IP filter download going wrong in some cases, by specifying mimetype in KFilterDev::deviceForFile
- Fix crash when not able to bind for DHT socket (215079)
- Make it optional to intercept Qt debug messages in InitLog call
- Fix crash when trying to unzip broken zip file in ipfilter download (215353)
- Add some limits so DHT tasks don't run for to long and eat up to much memory

Changes in 3.3:
- Fix deadlock in PacketReader
- Fix bug causing torrent not to get stopped properly when an IO error occurs
- Stop or start trackers when they get disabled or enabled
- Fix CPU consumption bug in DHT NodeLookup and AnnounceTask
- Fix crashes caused by reference count error in piece handling (204227, 186621)
- Make sure powermanagement is inhibited when mediaplayer plugin plays a video
- Fix crash caused by 0 pointer (jobuidelegate not set) (212580)
- Fix deadlock caused by missing endl in JobQueue